--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/travel_geography.png
+    - assets/images/profile_pic.png
+    - assets/images/Vector.png
+    - assets/images/Notification.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
